convertedCode/objects/Opportunity.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Amount_After_Discount__c</fullName>
        <description>Calculates the opportunity amount after any discount has been applied.</description>
        <formula>Amount  *  ( 1  -  Discount_Percentage__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity amount after discount has been applied.</inlineHelpText>
        <label>Amount After Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <description>Created for the VP of Global Sales to track wins and losses.</description>
        <inlineHelpText>When you close the opportunity, select one or more values that best describe your reason for closing.</inlineHelpText>
        <label>Close Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lost: Competitor</fullName>
                </value>
                <value>
                    <fullName>Lost: Price</fullName>
                </value>
                <value>
                    <fullName>Lost: Product Features</fullName>
                </value>
                <value>
                    <fullName>Lost: Project Abandoned</fullName>
                </value>
                <value>
                    <fullName>Lost: Company Budget Constraints</fullName>
                </value>
                <value>
                    <fullName>Lost: Other Reason</fullName>
                </value>
                <value>
                    <fullName>Won: Competitor</fullName>
                </value>
                <value>
                    <fullName>Won: Price</fullName>
                </value>
                <value>
                    <fullName>Won: Product Features</fullName>
                </value>
                <value>
                    <fullName>Won: Other Reason</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <description>Calculates sales rep commission of 10 percent when opportunity is won.</description>
        <formula>IF( ISPICKVAL( StageName , &quot;Closed Won&quot;) , Amount * 0.1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sales rep commission when opportunity is won.</inlineHelpText>
        <label>Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Employment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_Close__c</fullName>
        <formula>CloseDate  -  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Has__c</fullName>
        <label>Has</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Employment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_New__c</fullName>
        <formula>AND(
  CloseDate &gt;= TODAY(),
  CloseDate &lt;= (TODAY() + 7)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full-Time</fullName>
                </value>
                <value>
                    <fullName>Part-Time</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>nun-Full-Time</fullName>
                    <isActive>false</isActive>
                    <label>nun-Full-Time</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_of_target_amount__c</fullName>
        <formula>IF(
  ISBLANK( Amount ),
  0,
  Amount /  Amount 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent of target amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Region_Zone__c</fullName>
        <description>Displays the Region and Zone values from the account record.</description>
        <formula>TEXT( Account.Region__c ) &amp; &quot;/&quot; &amp; TEXT( Account.Zone__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account region and zone.</inlineHelpText>
        <label>Region/Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <validationRules>
        <fullName>Close_reason_required_when_lost</fullName>
        <active>true</active>
        <description>A close reason is required when opportunity is closed lost.</description>
        <errorConditionFormula>ISPICKVAL( StageName ,&quot;Closed Lost&quot;) &amp;&amp; ISBLANK(Close_Reason__c)</errorConditionFormula>
        <errorDisplayField>Close_Reason__c</errorDisplayField>
        <errorMessage>You must enter a close reason when opportunity is closed lost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_Of_Discount</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(),  Discount_Percentage__c &gt; 0.1 )</errorConditionFormula>
        <errorMessage>Discount percent cannot exceed 10%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_Without_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( StageName ),  ISBLANK( Amount ) )</errorConditionFormula>
        <errorMessage>You can&apos;t change stage if amount is null or empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_Field_Enforced</fullName>
        <active>true</active>
        <errorConditionFormula>$Setup.BypassValidation__c.BypassVR__c == FALSE &amp;&amp; ISPICKVAL(Type, &quot;&quot;)</errorConditionFormula>
        <errorMessage>Type field cannot be blank</errorMessage>
    </validationRules>
</CustomObject>